<resources>
    <string name="app_name">DailyNews</string>
    <string name="daily_news">Daily News</string>
    <string name="select">Select Your</string>
    <string name="favourite_section">Favourite Section</string>
    <string name="health">Health</string>
    <string name="business">Business</string>
    <string name="politics">Politics</string>
    <string name="sport">Sport</string>
</resources>